--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								jugá en línea.</h2>
 								<p class="lead mb-4 fw-normal">Bienvenido a tu casa de apuestas deportivas y casino online.</p>
 								<div>
-									<a class="btn mt-2 text-dark bg-white rounded-3 px-4 py-3 nott ls0 shadow-sm" href="https://api.whatsapp.com/send/?phone=1138244009&text&type=phone_number&app_absent=0" target="_blank"><i class="icon-whatsapp me-2"></i>CREAR USUARIO</a> <a class="ms-0 ms-lg-2 mt-2 btn text-dark bg-white rounded-3 px-4 py-3 nott ls0 shadow-sm" href="https://atilabet.com/home" target="_blank"><i class="icon-play me-2"></i>JUGAR</a>
+									<a class="btn mt-2 text-dark bg-white rounded-3 px-4 py-3 nott ls0 shadow-sm" href="https://api.whatsapp.com/send/?phone=+5491138244009&text&type=phone_number&app_absent=0" target="_blank"><i class="icon-whatsapp me-2"></i>CREAR USUARIO</a> <a class="ms-0 ms-lg-2 mt-2 btn text-dark bg-white rounded-3 px-4 py-3 nott ls0 shadow-sm" href="https://atilabet.com/home" target="_blank"><i class="icon-play me-2"></i>JUGAR</a>
 								</div>
 								<p class="text-white-50 text-uppercase mt-2 ls1 fw-medium"><small>Registrate y Obtené grandes Recompensas.</small></p>
 							</div>
@@ -537,7 +537,7 @@
 						</div>
 					</div>
 					<div class="col-md-6 text-center text-md-end">
-						<a class="btn color bg-white rounded px-3 py-2 nott ls0 shadow-sm" href="https://api.whatsapp.com/send/?phone=1138244009&text&type=phone_number&app_absent=0" target="_blank"><i class="icon-whatsapp me-2"></i>CREAR USUARIO</a> <a class="btn color bg-white rounded px-3 py-2 nott ls0 shadow-sm ms-2" href="https://atilabet.com/home" target="_blank"><i class="icon-play me-2"></i>JUGAR</a>
+						<a class="btn color bg-white rounded px-3 py-2 nott ls0 shadow-sm" href="https://api.whatsapp.com/send/?phone=+5491138244009&text&type=phone_number&app_absent=0" target="_blank"><i class="icon-whatsapp me-2"></i>CREAR USUARIO</a> <a class="btn color bg-white rounded px-3 py-2 nott ls0 shadow-sm ms-2" href="https://atilabet.com/home" target="_blank"><i class="icon-play me-2"></i>JUGAR</a>
 					</div>
 				</div>
 			</div>
